syntax = "proto3";
package core.solo.io;
option go_package = "github.com/solo-io/solo-kit/pkg/api/v1/resources/core";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;
/**
 * Status indicates whether a resource has been (in)validated by a reporter in the system.
 * Statuses are meant to be read-only by users
 */
message Status {
    enum State {
        // Pending status indicates the resource has not yet been validated
        Pending = 0;
        // Accepted indicates the resource has been validated
        Accepted = 1;
        // Rejected indicates an invalid configuration by the user
        // Rejected resources may be propagated to the xDS server depending on their severity
        Rejected = 2;
    }
    // State is the enum indicating the state of the resource
    State state = 1;
    // Reason is a description of the error for Rejected resources. If the resource is pending or accepted, this field will be empty
    string reason = 2;
    // Reference to the reporter who wrote this status
    string reported_by = 3;
    // Reference to statuses (by resource-ref string: "Kind.Namespace.Name") of subresources of the parent resource
    map<string, Status> subresource_statuses = 4;
}